--- a/AllControlsTest/AllControlsTest/Base.lproj/Main.storyboard
+++ b/AllControlsTest/AllControlsTest/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RDY-Vh-Ewm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RDY-Vh-Ewm">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,10 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EA2-dz-VYw">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EA2-dz-VYw">
                                 <rect key="frame" x="20" y="797" width="374" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.085009090600000004" green="0.47703945640000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="YOq-cT-cAe"/>
+                                </constraints>
                                 <state key="normal" title="SEND">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -27,13 +30,12 @@
                                     <action selector="sendButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1iG-uW-Sg8"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5ID-Gn-wLL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5ID-Gn-wLL">
                                 <rect key="frame" x="0.0" y="88" width="414" height="709"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldTableViewCell" rowHeight="76" id="5nb-Te-kZb" customClass="TextFieldTableViewCell" customModule="AllControlsTest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="76"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5nb-Te-kZb" id="kaL-sY-kQJ">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="76"/>
@@ -80,7 +82,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CheckBoxTableViewCell" id="m7J-Nk-mnF" customClass="CheckBoxTableViewCell" customModule="AllControlsTest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="104" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="120.5" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="m7J-Nk-mnF" id="WLB-Av-nAJ">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -104,7 +106,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RadioButtonTableViewCell" id="Ytl-lV-v4F" customClass="RadioButtonTableViewCell" customModule="AllControlsTest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="148" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="164.5" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ytl-lV-v4F" id="OeU-Kv-pXP">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -136,6 +138,15 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5ID-Gn-wLL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3HT-UI-wMn"/>
+                            <constraint firstItem="5ID-Gn-wLL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YqC-Nv-kne"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EA2-dz-VYw" secondAttribute="bottom" constant="20" id="d9y-vF-SV9"/>
+                            <constraint firstItem="5ID-Gn-wLL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hre-wN-qKX"/>
+                            <constraint firstItem="EA2-dz-VYw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="iL5-LI-HHa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EA2-dz-VYw" secondAttribute="trailing" constant="20" id="jwJ-go-Wc5"/>
+                            <constraint firstItem="EA2-dz-VYw" firstAttribute="top" secondItem="5ID-Gn-wLL" secondAttribute="bottom" id="xaf-OX-sXq"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="FIll Form" id="ccP-qH-QbX"/>
                     <connections>
