--- a/Workflow_Signing_Diagram/Workflow_Signing_Diagram/Base.lproj/Main.storyboard
+++ b/Workflow_Signing_Diagram/Workflow_Signing_Diagram/Base.lproj/Main.storyboard
@@ -137,6 +137,11 @@
                                                         <constraint firstAttribute="width" constant="1" id="0pL-XH-Rav"/>
                                                     </constraints>
                                                 </view>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="czf-52-SVP">
+                                                    <rect key="frame" x="303" y="0.0" width="1" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" systemColor="labelColor"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="d6a-pJ-ahp" firstAttribute="leading" secondItem="vei-5y-i6F" secondAttribute="leadingMargin" constant="55" id="7oz-qi-4I9"/>
@@ -402,6 +407,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
